# yamf-playground

./: EXTENSIBILITY.md  NOTES.md  README.md
java/: pom.xml
java/src/main/java/org/incenp/yamf/playground/: PIDINSTParser.java
java/src/main/java/org/incenp/yamf/playground/model/: DateType.java  RelatedIdentifierType.java  (+1 more)
java/src/test/java/org/incenp/yamf/playground/: TestBarParser.java  TestBaseParser.java  TestFooBarParser.java  TestFooParser.java  TestOMEParser.java  TestPIDINSTParser.java
linkml/: bar.yaml  base.yaml  foo.yaml  foobar.yaml
linkml/frobnicator/: bar.yaml  baz.yaml  foo.yaml  frobnicator.yaml
linkml/ome/: ome-nbo.yaml  ome.yaml
linkml/pidinst/: pidinst-foo.yaml  pidinst.yaml
presentations/linkml-202610/: .gitignore  Makefile  README.md  handout.tex  presentation.tex  screen.tex
presentations/quarep-202609/: README.md  notes.tex  presentation.tex
python/: pyproject.toml
python/src/incenp/yamf/playground/: __init__.py  bar.py  base.py  cli.py  direct.py  foo.py  foobar.py  nested.py  pidinst.py  pidinstfoo.py
python/tests/: test_direct.py  test_nested.py
samples/: test-base.json  test-extended-direct.json  test-extended-nested.json
samples/frobnicator/: sample1-with-bar+bar2.yaml  sample1-with-bar.yaml  sample1-with-baz.yaml  sample1-with-foo+foo2.yaml  sample1-with-foo.yaml  sample1.yaml
samples/ome/: ome-base.json  ome-base.yaml  ome-nbo-direct.json  ome-nbo-ext.yaml
samples/pidinst/: pidinst-base.json  pidinst-base.yaml  pidinst-extended-direct.json  pidinst-extended-ext.yaml  pidinst-extended-nested.json
(+108 files in other folders)
